[workspace]
members = [
    "pf_sandbox",
    "pf_tas",
    "pf_cli",
    "map_controllers"
]

[patch.crates-io]
gilrs = { git = "https://gitlab.com/rukai/gilrs" }
vulkano = { git = "https://github.com/rukai/vulkano" }
vulkano-win = { git = "https://github.com/rukai/vulkano" }
vulkano-shader-derive = { git = "https://github.com/rukai/vulkano" }
env_logger = { git = "https://github.com/rukai/env_logger" }
