[package]
name = "pf_map_controllers"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]

[dependencies]
gdk = "0.9"
gilrs-core = { git = "https://gitlab.com/gilrs-project/gilrs" }
gtk = { version = "0.5", features = ["v3_12"] }
pf_sandbox_lib = { path = "../pf_sandbox_lib" }
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
