[package]
name = "pf_map_controllers"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2018"

[dependencies]
gdk = "0.10"
gilrs-core = "0.2"
gtk = { version = "0.6" }
pf_sandbox_lib = { path = "../pf_sandbox_lib" }
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
