[package]
name = "pf_engine"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
build = "build.rs"

[dependencies]
vulkano = "0.3.1"
vulkano-win = "0.3.1"
winit = "0.5.8"
getopts = "0.2.14"
libusb = "0.2"
enum_primitive = "0.1.0"
num = "0.1.32"
treeflection = "0.1.14"
treeflection_derive = "0.1.10"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
matches = "0.1.4"

[build-dependencies]
vulkano-shaders = "0.3.1"

[features]
vulkan = []
