[package]
name = "pf_engine"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
build = "build.rs"

[dependencies]
getopts = "0.2"
libusb = "0.3"
enum_primitive = "0.1.0"
num = "0.1.32"
treeflection = "0.1.15"
treeflection_derive = "0.1.11"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
matches = "0.1.4"

winit = { version = "0.5", optional = true }
vulkano = { version = "0.3", optional = true }
vulkano-win = { version = "0.3", optional = true }
glium = { version = "0.16", optional = true }
vulkano_text = { version = "0.1", optional = true }

[build-dependencies]
vulkano-shaders = { version = "0.3", optional = true }

[features]
default = ["vulkan", "opengl"]
vulkan = ["vulkano", "vulkano-win", "vulkano-shaders", "winit", "vulkano_text"]
opengl = ["glium"]
