cargo-features = ["default-run"]

[package]
name = "pf_sandbox"
version = "0.1.1"
authors = ["Rukai <rubickent@gmail.com>"]
description = "A platform fighter sandbox featuring a character editor tightly integrated with gameplay."
license = "GPL-3.0"
repository = "https://github.com/rukai/pf_sandbox"
homepage = "https://pfsandbox.net"
keywords = ["pf", "sandbox", "platform", "fighter", "game"]
categories = ["games", "game-engines"]
default-run = "pf_sandbox"
edition = "2018"

[dependencies]
pf_sandbox_lib = { path = "../pf_sandbox_lib" }
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
getopts = "0.2"
gilrs-core = "0.1"
libusb = "0.3"
log = "0.4"
lyon = "0.13"
rand = "0.6"
rand_chacha = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
treeflection = "0.1"
treeflection_derive = "0.3"
winit = "0.18" # Needed on all builds, game logic is dependent on VirtualKeyCode struct
winit_input_helper = "0.2"

vulkano = { version = "0.11", optional = true }
vulkano-win = { version = "0.11", optional = true }
vulkano-shaders = { version = "0.11", optional = true }
vulkano_text = { version = "0.9", optional = true }
cgmath = { version = "0.17", optional = true }

[features]
default = ["vulkan"]
vulkan = ["vulkano", "vulkano-win", "vulkano-shaders", "vulkano_text", "cgmath"]
