[package]
name = "pf_sandbox_lib"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Data structures and helper code for PF Sandbox"
license = "GPL-3.0"
repository = "https://github.com/rukai/pf_sandbox"
homepage = "https://pfsandbox.net"
keywords = ["pf", "sandbox", "platform", "fighter", "game"]
categories = ["games", "game-engines"]

[dependencies]
backtrace = "0.3"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "1"
enum_traits = "0.3"
enum_traits_macros = "2.0"
env_logger = "0.5"
gilrs = "0.6"
log = "0.4"
matches = "0.1"
os_type = "2"
rand = "0.5"
reqwest = "0.8"
rust-crypto = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempdir = "0.3"
toml = "0.4"
treeflection = "0.1"
treeflection_derive = "0.3"
uuid = { version = "0.6.0-beta", features = ["v4", "serde"] }
winit = { git = "https://github.com/tomaka/winit" } # Needed on all builds, game logic is dependent on VirtualKeyCode struct
zip = "0.4"
