[package]
name = "pf_tas"
version = "0.1.1"
authors = ["Rukai <rubickent@gmail.com>"]
description = "TAS tool for PF sandbox"
license = "GPL-3.0"
repository = "https://github.com/rukai/pf_sandbox"
keywords = ["pf", "sandbox", "TAS"]

[dependencies]
winit = { git = "https://github.com/tomaka/winit" }
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-win = { git = "https://github.com/rukai/vulkano", branch = "git_winit" }
vulkano-shader-derive = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano_text = { git = "https://github.com/rukai/vulkano-text" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
