[package]
name = "pf_tas"
version = "0.1.1"
authors = ["Rukai <rubickent@gmail.com>"]
description = "TAS tool for PF sandbox"
license = "GPL-3.0"
repository = "https://github.com/rukai/pf_sandbox"
keywords = ["pf", "sandbox", "TAS"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
gdk = "0.11"
gtk = "0.7"
